gitops/manifests/glance/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: glance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
        app.kubernetes.io/name: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
            - name: timezone
              mountPath: /etc/timezone
              readOnly: true
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: glance-config
        - name: timezone
          hostPath:
            path: /etc/timezone
            type: File
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: glance-service
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-ingress
  namespace: glance
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.local.timmybtech.com`)
      kind: Rule
      services:
        - name: glance-service
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
